<resources>
    <string name="app_name">Weekly</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Ignore Me</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for Commit #1 Basic Layout -->
    <string name="task_title">Task Title</string>
    <string name="weight">Weight</string>
    <string name="task_priority">What is the priority of this task?</string>
    <string name="no_priority">No Priority</string>
    <string name="with_priority">With Priority</string>
    <string name="set_before">Set Before:</string>
    <string name="set_after">Set After:</string>
    <string name="set_specifically">Set Specifically On:</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>

</resources>